<resources>
    <string name="app_name">finance_crypto_dashboard</string>
    <string name="search">Search</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="add">Add</string>
    <string name="view_all">View All</string>
    <string name="sectors">Sectors</string>
    <string name="see_all">See All</string>
    <string name="stock_futures">Stock Futures</string>
    <string name="crypto_activities">Crypto Activities</string>
    <string name="dollar_sign">$ %1$.2f</string>
    <string name="property_size">%1$.2f%2$s</string>
    <string name="change_percent">%1$.2f %%</string>
</resources>